tests/handlers/snapshots/handler_tests__handlers__validation__mutation_update_malformed_entity_id.snap
---
source: tests/handlers/validation.rs
expression: error_msg
---
Consistency check failed: Database error: Parse error: Unexpected end of file, expected an expression
 --> [1:61]
  |
1 | ...#invalid###
  |              ^
